--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - sudo apt-get install git -qq -y
   - sudo apt-get -o Dpkg::Options::="--force-confnew" upgrade -qq -y
   - sudo apt-get -o Dpkg::Options::="--force-confnew" install aptitude -y
-  - git clone git@github.com:haikulab/ansible-init.git
+  - git clone https://github.com/haikulab/ansible-user.git
 
 install:
   # Install Ansible.
